# mcp-gsuite

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
src/mcp_gsuite/: auth_helper.py  calendar.py  fast_server.py  gauth.py  gmail.py  server.py  settings.py  toolhandler.py  tools.py  tools_calendar.py  tools_gmail.py
