[project]
name = "mcp-gsuite"
version = "0.4.1"
description = "MCP Server to connect to Google G-Suite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "beautifulsoup4>=4.12.3",
 "google-api-python-client>=2.154.0",
 "httplib2>=0.22.0",
 # "mcp>=1.3.0", # Now included via fastmcp
 "oauth2client==4.1.3",
 "python-dotenv>=1.0.1",
 "pytz>=2024.2",
 "requests>=2.32.3",
 "fastmcp>=2.1.2,<2.2.0",
 "pydantic-settings>=2.8.1,<2.9.0",
]
[[project.authors]]
name = "Markus Pfundstein"
email = "markus@life-electronic.nl"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pyright>=1.1.389",
]

[project.scripts]
# mcp-gsuite = "mcp_gsuite:main" # Old entry point
mcp-gsuite-fast = "mcp_gsuite.fast_server:mcp.run" # New entry point using fastmcp
